packages/pro/search/style/quick-select.less
@import '../../../components/style/mixins/ellipsis.less';
@import './mixin.less';

.@{pro-search-prefix}-quick-select {
  &-overlay {
    .overlay();
  }

  &-panel {
    padding: var(--ix-padding-size-md) var(--ix-padding-size-md) 0;

    @shortcust-padding: 8px;
    &-shortcuts {
      position: relative;
      width: 100%;
      display: flex;
      flex-wrap: wrap;
      padding: 0 @shortcust-padding var(--ix-padding-size-xs) @shortcust-padding;
      margin-bottom: var(--ix-padding-size-md);
      
      &::after {
        content: ' ';
        position: absolute;
        bottom: 0;
        left: @shortcust-padding;
        width: calc(100% - @shortcust-padding * 2);
        height: 1px;
        background-color: var(--ix-color-separator);
      }
    }
    &-items {
      width: 100%;
      overflow: auto hidden;
      display: flex;
      align-items: stretch;
      justify-content: flex-start;
      padding: 0 0 var(--ix-padding-size-md);
    }
    &-item-separator {
      width: 1px;
      margin: 0 var(--ix-padding-size-xs);
      flex-shrink: 0;
    }
  }
  &-shortcut {
    margin-bottom: var(--ix-margin-size-sm);
    height: var(--ix-height-sm);
    padding: 2px var(--ix-padding-size-sm);
    display: flex;
    align-items: center;
    border: var(--ix-line-width) var(--ix-line-type) var(--ix-color-border-secondary);
    border-radius: 2px;
    cursor: pointer;
    &:not(&:last-child) {
      margin-right: var(--ix-margin-size-sm);
    }

    &-icon {
      font-size: var(--ix-font-size-icon);
      margin-right: var(--ix-margin-size-xs);
      color: var(--ix-color-icon-info);
    }
  }
  &-item {
    min-width: 220px;
    max-height: 345px;
    flex: 1;
    display: flex;
    flex-direction: column;
    overflow: hidden auto;

    &-header {
      position: relative;
      width: 100%;
      padding: 0 var(--ix-padding-size-sm) var(--ix-padding-size-xs) var(--ix-padding-size-sm);
      display: flex;
      align-items: center;
      justify-content: space-between;
    }
    &-content {
      flex: auto;
    }
    &-label {
      height: 100%;
      max-width: calc(100% - var(--ix-height-sm));
      color: var(--ix-color-text-info);
      .ellipsis();
    }
    &-search-bar {
      position: absolute;
      right: 0;
      height: var(--ix-height-sm);
      width: var(--ix-height-sm);
      display: flex;
      align-items: center;
      justify-content: flex-end;
      background-color: @pro-search-background-color;
      border: var(--ix-line-width) solid transparent;
      transition: all var(--ix-motion-duration-fast) var(--ix-motion-ease-in-out);

      &-opened {
        width: 100%;
        border: var(--ix-line-width) var(--ix-line-type) @pro-search-border-color;
        border-radius: @pro-search-border-radius;
      }
    }
    &-search-bar:not(&-search-bar-opened) &-search-input {
      padding: 0;
    }
    &-search-input {
      width: 0;
      border: 0;
      height: 100%;
      flex: auto;
      transition: none;
    }
    &-search-icon {
      width: var(--ix-height-sm);
      font-size: var(--ix-font-size-icon);
      flex-shrink: 0;
      color: var(--ix-color-icon);
      cursor: pointer;
    }

    &.@{pro-search-prefix}-date-range-picker-segment-container {
      min-width: 505px;
    }
    &.@{pro-search-prefix}-date-picker-segment-container {
      min-width: 252px;
    }
    .@{pro-search-prefix}-select-panel {
      min-height: 230px;
      .@{select-option-prefix} {
        padding: var(--ix-padding-size-sm);
        &-selected:not(&-disabled) {
          border-radius: var(--ix-border-radius-sm);
        }
      }
    }

    .@{pro-search-prefix}-tree-select-panel {
      min-height: 230px;
    }
    .@{pro-search-prefix}-date-picker-panel {
      width: 493px;
      padding: var(--ix-padding-size-sm) var(--ix-padding-size-sm) 0 var(--ix-padding-size-sm);
      &-body {
        padding: 0 0 var(--ix-padding-size-sm);
      }
      .@{pro-search-prefix}-panel-footer {
        padding: var(--ix-padding-size-sm) 0 0;
      }
    }
  }
}

